Fix kategorie-field align

--- a/depot_theme/scss/modules/_form.scss
+++ b/depot_theme/scss/modules/_form.scss
@@ -308,7 +308,7 @@ label {
 }
 
 .form-item-field-fake-kategorie {
-  margin-top: 36px;
+  margin-top: 23px;
 }
 
 .form-item-field-nutzungsbedingungen-und .option {
